js/js.translator/testData/incremental/invalidation/gettersAndSettersInlining/lib2/l2.kt
class Child(objectName: String) : Parent(objectName)
